--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 .login-div {
-    margin: auto;
+    margin: 30px auto;
     width: 430px;
     height: auto;
     padding: 30px 35px 35px 35px;
@@ -40,6 +40,7 @@ body {
 .alert {
     text-align: center;
     margin-left: auto;
+    background-color: grey;
 }
 
 .alert-danger {
@@ -470,7 +471,7 @@ body {
 
 .dashboard-experiece-heading {
     font-weight: 700;
-    margin: 30px 400px 10px;
+    margin: 40px 220px 20px;
 }
 
 .dashboard-div-experience {
@@ -535,8 +536,12 @@ body {
     box-shadow: inset 3px 3px 8px #b1b1b1, inset -3px -3px 8px #ffffff;
 }
 
+.dashboard-table-delete-btn:focus {
+    outline: none;
+}
+
 .dashboard-delete-btn {
-    margin: 40px 550px;
+    margin: 60px 370px;
     outline: none;
     border: none;
     cursor: pointer;
@@ -555,6 +560,10 @@ body {
 
 .dashboard-delete-btn:hover {
     box-shadow: inset 3px 3px 8px #b1b1b1, inset -3px -3px 8px #ffffff;
+}
+
+.dashboard-delete-btn:focus {
+    outline: none;
 }
 
 /* add education */
